# PoliticalPartyParty

./: .gitignore  README.md
design/: .$p3.drawio.bkp  .$p3UML.drawio.bkp  .$p3flowchart.drawio.bkp  .$p3mainloop.drawio.bkp  gamelogicUML.drawio  mainloopFlow.drawio  p3UML.drawio  scenesUML.drawio
game/: CMakeLists.txt
game/include/: example.h
project/h_files/: example.h
